kernels/custom_cuda/build/build_log.txt
/usr/bin/cmake -S/home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda -B/home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/build --check-build-system CMakeFiles/Makefile.cmake 0
/usr/bin/cmake -E cmake_progress_start /home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/build/CMakeFiles /home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/build//CMakeFiles/progress.marks
make  -f CMakeFiles/Makefile2 all
make[1]: Entering directory '/home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/build'
make  -f CMakeFiles/NeuralNetProject.dir/build.make CMakeFiles/NeuralNetProject.dir/depend
make[2]: Entering directory '/home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/build'
cd /home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/build && /usr/bin/cmake -E cmake_depends "Unix Makefiles" /home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda /home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda /home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/build /home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/build /home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/build/CMakeFiles/NeuralNetProject.dir/DependInfo.cmake "--color="
Dependencies file "CMakeFiles/NeuralNetProject.dir/main.cpp.o.d" is newer than depends file "/home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/build/CMakeFiles/NeuralNetProject.dir/compiler_depend.internal".
Consolidate compiler generated dependencies of target NeuralNetProject
make[2]: Leaving directory '/home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/build'
make  -f CMakeFiles/NeuralNetProject.dir/build.make CMakeFiles/NeuralNetProject.dir/build
make[2]: Entering directory '/home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/build'
[  7%] Building CXX object CMakeFiles/NeuralNetProject.dir/main.cpp.o
/usr/bin/g++-14  -I/home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda -I/home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/Data -I/home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/Layers -std=c++17 -MD -MT CMakeFiles/NeuralNetProject.dir/main.cpp.o -MF CMakeFiles/NeuralNetProject.dir/main.cpp.o.d -o CMakeFiles/NeuralNetProject.dir/main.cpp.o -c /home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/main.cpp
In file included from /home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/Layers/layers.cuh:2,
                 from /home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/neuralnet.cpp:1,
                 from /home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/main.cpp:4:
/home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/Layers/../Data/container.cu: In constructor ‘Container<T>::Container(const std::vector<int>&)’:
/home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/Layers/../Data/container.cu:15:27: error: returning a value from a constructor
   15 |   return this->data.resize(size);
      |          ~~~~~~~~~~~~~~~~~^~~~~~
/home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/Layers/../Data/container.cu: In constructor ‘Container<T>::Container(const std::vector<int>&, T)’:
/home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/Layers/../Data/container.cu:25:27: error: returning a value from a constructor
   25 |   return this->data.resize(size, value);
      |          ~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~
/home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/Layers/../Data/container.cu: In function ‘void xavierKernel(float*, int, float, curandState*)’:
/home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/Layers/../Data/container.cu:68:15: error: ‘blockIdx’ was not declared in this scope
   68 |   int index = blockIdx.x * blockDim.x + threadIdx.x;
      |               ^~~~~~~~
/home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/Layers/../Data/container.cu: In member function ‘void Container<T>::xavierInit(size_t, size_t)’:
/home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/Layers/../Data/container.cu:87:17: error: expected primary-expression before ‘<’ token
   87 |   xavierKernel<<<gridSize, BLOCK_SIZE>>>(ptr, size, scale, statePtr);
      |                 ^
/home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/Layers/../Data/container.cu:87:40: error: expected primary-expression before ‘>’ token
   87 |   xavierKernel<<<gridSize, BLOCK_SIZE>>>(ptr, size, scale, statePtr);
      |                                        ^
/home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/neuralnet.cpp: In member function ‘void Architecture<T>::addConv(int, int, int, int, int)’:
/home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/neuralnet.cpp:54:45: error: ‘Conv’ was not declared in this scope
   54 |     layersVector.push_back(std::make_unique<Conv<T>>(
      |                                             ^~~~
/home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/neuralnet.cpp:54:33: error: parse error in template argument list
   54 |     layersVector.push_back(std::make_unique<Conv<T>>(
      |                                 ^~~~~~~~~~~~~~~~~~
/home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/neuralnet.cpp: In member function ‘void Architecture<T>::addLinear(int, int)’:
/home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/neuralnet.cpp:62:45: error: ‘Linear’ was not declared in this scope; did you mean ‘addLinear’?
   62 |     layersVector.push_back(std::make_unique<Linear<T>>(numInputs, numOutputs));
      |                                             ^~~~~~
      |                                             addLinear
/home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/neuralnet.cpp:62:33: error: parse error in template argument list
   62 |     layersVector.push_back(std::make_unique<Linear<T>>(numInputs, numOutputs));
      |                                 ^~~~~~~~~~~~~~~~~~~~
/home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/neuralnet.cpp: In member function ‘void Architecture<T>::addRelu(int)’:
/home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/neuralnet.cpp:66:45: error: ‘ReLu’ was not declared in this scope
   66 |     layersVector.push_back(std::make_unique<ReLu<T>>(numInputs));
      |                                             ^~~~
/home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/neuralnet.cpp:66:33: error: parse error in template argument list
   66 |     layersVector.push_back(std::make_unique<ReLu<T>>(numInputs));
      |                                 ^~~~~~~~~~~~~~~~~~
/home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/neuralnet.cpp: In member function ‘void Architecture<T>::addMaxPool(int, int)’:
/home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/neuralnet.cpp:70:45: error: ‘Pooling’ was not declared in this scope
   70 |     layersVector.push_back(std::make_unique<Pooling<T>>(kernelSize, stride));
      |                                             ^~~~~~~
/home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/neuralnet.cpp:70:33: error: parse error in template argument list
   70 |     layersVector.push_back(std::make_unique<Pooling<T>>(kernelSize, stride));
      |                                 ^~~~~~~~~~~~~~~~~~~~~
/home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/main.cpp: In function ‘int main()’:
/home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/main.cpp:18:3: error: ‘load_mnist_images’ was not declared in this scope
   18 |   load_mnist_images("../../data/MNIST/raw/train-images-idx3-ubyte", 60000, 784);
      |   ^~~~~~~~~~~~~~~~~
/home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/main.cpp:19:3: error: ‘load_mnist_labels’ was not declared in this scope
   19 |   load_mnist_labels("../../data/MNIST/raw/train-labels-idx1-ubyte", 60000);
      |   ^~~~~~~~~~~~~~~~~
make[2]: *** [CMakeFiles/NeuralNetProject.dir/build.make:79: CMakeFiles/NeuralNetProject.dir/main.cpp.o] Error 1
make[2]: Leaving directory '/home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/build'
make[1]: *** [CMakeFiles/Makefile2:87: CMakeFiles/NeuralNetProject.dir/all] Error 2
make[1]: Leaving directory '/home/mrgrinch/coding/MLP-Cuda/kernels/custom_cuda/build'
make: *** [Makefile:91: all] Error 2
